build: reintroduce jlink